--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <input type="email" name="mail" id="mail"><br>
 
         <label for="tel">Telefon:</label><br>
-        <input type="tel" name="tel" id="tel"><br>
+        <input type="tel" name="tel" id="tel"><br><br>
 
         <label>Miasto:<br>
             <select name="miasto">
